# building_infra_sims

./: .env.example  .gitignore  CLAUDE.local.md.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: openapi_spec.json  realistic_values_research.md
profiles/bacnet/: generic_ahu.yaml  generic_boiler.yaml  generic_chiller.yaml  generic_cooling_tower.yaml  generic_dhw.yaml  generic_elevator.yaml  generic_fcu.yaml  generic_fire_alarm_panel.yaml  generic_heat_pump.yaml  generic_lighting_controller.yaml  generic_meter.yaml  generic_rtu.yaml  generic_vav.yaml
profiles/modbus/: generic_electrical_panel.yaml  generic_energy_meter_demand.yaml  generic_exhaust_fan.yaml  generic_hvac_controller.yaml  generic_power_disconnect.yaml  generic_power_meter.yaml  generic_pump.yaml  generic_sensor_rack.yaml  generic_vfd.yaml  generic_weather_station.yaml
profiles/scenarios/: campus.yaml  cloudbimstorm_re1.yaml  data_center.yaml  medium_office.yaml  small_office.yaml  verdicity_apartment_tower.yaml  verdicity_demo_office.yaml
scripts/: explore_skybox.py  fetch_openapi_spec.py  verify_bacnet_device.py  verify_modbus_device.py
src/building_infra_sims/: __init__.py  cli.py  config.py  world.py
src/building_infra_sims/bacnet/: __init__.py  objects.py  profiles.py  server.py
src/building_infra_sims/behaviors/: __init__.py  base.py
src/building_infra_sims/dashboard/: app.py  recorder.py  routes.py  state.py
tests/: test_dashboard.py  test_data_sanity.py  test_profiles.py  test_recorder.py  test_world.py  test_write_tracking.py
(+18 files in other folders)
